--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,45 @@
     android:orientation="vertical">
 
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:background="@color/light_grey"
-        android:padding="10dp"
-        android:textSize="48sp"
-        android:gravity="end|bottom"
-        android:text="@string/calc_text"
-    />
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/textViewFirstNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/light_grey"
+            android:padding="10dp"
+            android:textSize="48sp"
+            android:gravity="end|bottom"
+            android:text="@string/calc_text"
+            />
+        <TextView
+            android:id="@+id/textViewOperator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/light_grey"
+            android:padding="10dp"
+            android:textSize="48sp"
+            android:gravity="end|bottom"
+            android:text="@string/add"
+            />
+        <TextView
+            android:id="@+id/textViewSecondNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/light_grey"
+            android:padding="10dp"
+            android:textSize="48sp"
+            android:gravity="end|bottom"
+            android:text="@string/calc_text"
+            />
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -56,7 +86,7 @@
             android:layout_weight="1"
             android:layout_margin="2dp"
             android:text="@string/divide"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             />
 
     </LinearLayout>
@@ -99,7 +129,7 @@
             android:layout_weight="1"
             android:layout_margin="2dp"
             android:text="@string/multiply"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             />
 
     </LinearLayout>
@@ -142,7 +172,7 @@
             android:layout_weight="1"
             android:layout_margin="2dp"
             android:text="@string/subtract"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             />
 
     </LinearLayout>
@@ -155,10 +185,19 @@
             android:id="@+id/buttonZero"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:layout_margin="2dp"
             android:text="@string/_0"
             android:onClick="onDigit"
+            />
+        <Button
+            android:id="@+id/buttonDecimalPoint"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="2dp"
+            android:text="@string/decimal_point"
+            android:onClick="onDecimalPoint"
             />
         <Button
             android:id="@+id/buttonClear"
@@ -167,7 +206,7 @@
             android:layout_weight="1"
             android:layout_margin="2dp"
             android:text="@string/clr"
-            android:onClick="onDigit"
+            android:onClick="onClear"
             />
         <Button
             android:id="@+id/buttonAdd"
@@ -176,7 +215,7 @@
             android:layout_weight="1"
             android:layout_margin="2dp"
             android:text="@string/add"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             />
 
     </LinearLayout>
@@ -192,7 +231,7 @@
             android:layout_weight="1"
             android:layout_margin="2dp"
             android:text="@string/equals"
-            android:onClick="onDigit"
+            android:onClick="onEquals"
             />
 
     </LinearLayout>
